[project]
name = "matrix-bgpsim"
version = "0.1.0"
description = "Matrix-based BGP simulation tool for AS-level routing analysis, supporting GPU acceleration."
authors = [{ name = "Yihao Chen", email = "yh-chen21@mails.tsinghua.edu.cn" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "lz4",
    "numpy>=1.21"
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
cupy = ["cupy>=12.0.0"]

[project.urls]
Homepage = "https://github.com/yhchen-tsinghua/matrix-bgpsim"
Repository = "https://github.com/yhchen-tsinghua/matrix-bgpsim"
Issues = "https://github.com/yhchen-tsinghua/matrix-bgpsim/issues"
Documentation = "https://github.com/yhchen-tsinghua/matrix-bgpsim/wiki"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["matrix_bgpsim*"]

[tool.setuptools]
package-dir = {"" = "."}
